<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_profile"
        android:layout_width="352dp"
        android:layout_height="112dp"
        android:layout_marginTop="23dp"
        app:cardBackgroundColor="@color/accent_purple"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/progress_horizontal"
                app:shapeAppearanceOverlay="@style/CircleImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_avatar_text"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="JD"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_user_avatar"
                app:layout_constraintEnd_toEndOf="@id/iv_user_avatar"
                app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
                app:layout_constraintTop_toTopOf="@id/iv_user_avatar" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Name-here"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_avatar"
                app:layout_constraintTop_toTopOf="@id/iv_user_avatar" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="sample@gmail.com"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_info"
        style="@style/TaskFlowButtonDark"
        android:layout_width="272dp"
        android:layout_height="52dp"
        android:layout_marginTop="380dp"
        android:text="@string/edit_info"
        android:textAllCaps="false"
        android:textColor="@color/text_off_white"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconGravity="textStart"
        app:iconTint="@color/text_off_white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_user_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_out"
        style="@style/TaskFlowButtonRed"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:icon="@android:drawable/ic_lock_power_off"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_info" />

    <TextView
        android:id="@+id/tv_dev_info_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Developer Info"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_out" />

</androidx.constraintlayout.widget.ConstraintLayout>